testsuite/tests/properties/invalid_node_builder/common_empty.lkt
import common

@synthetic class EmptyNode: FooNode {
}
